--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seu Nome - Cartão Virtual</title>
+    <title>Eduardo Luparele - Cartão Virtual</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="caminho/para/seu/favicon.ico" type="image/x-icon">
 </head>
