--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Eduardo Luparele - Cartão Virtual</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="caminho/para/seu/favicon.ico" type="image/x-icon">
+    <meta name="theme-color" content="#6a11cb"> 
 </head>
 <body>
     <header class="profile-header">
