--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         </div>
         <h1>Eduardo Luparele</h1>
         <p>Coordenador de Security | Intalog</p>
+
+        <div class="logo-container">
+            <img src="img/logo.png" alt="Logo da Empresa" class="company-logo">
+        </div>
     </header>
 
     <main class="button-container">
@@ -31,6 +35,7 @@
         <a href="https://www.linkedin.com/in/eduardo-luparele-coelho-492851296/" target="_blank" class="button social-button linkedin">
             <i class="fab fa-linkedin"></i> LinkedIn
         </a>
+        <!--
         <a href="https://www.instagram.com/eduardo_luparele" target="_blank" class="button social-button instagram">
             <i class="fab fa-instagram"></i> Instagram
         </a>
@@ -40,6 +45,7 @@
         <button class="button pix-button" id="openPixQr">
             <i class="fas fa-qrcode"></i> Pix QR Code
         </button>
+        -->
         <button class="button save-contact-button" id="saveContact">
             <i class="fas fa-address-book"></i> Salvar Contato
         </button>
