--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
         </div>
     </div>
 
+    <footer class="footer">
+        <p>&copy; 2025 Eduardo Luparele. Todos os direitos reservados.</p>
+    </footer>
+
     <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
 </body>
